--- a/index.html
+++ b/index.html
@@ -246,6 +246,23 @@
             });
         });
     </script>
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const slides = document.querySelectorAll(".bon-a-savoir-slide");
+        let index = 0;
+
+        function showNextSlide() {
+            slides.forEach(slide => slide.classList.remove("active"));
+            slides[index].classList.add("active");
+
+            index = (index + 1) % slides.length;
+        }
+
+        showNextSlide(); // Afficher le premier élément
+        setInterval(showNextSlide, 3000); // Défilement toutes les 3 secondes
+    });
+</script>
+
 </body>
 </html>
      
