--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      .bon-a-savoir-container {
     width: 100%;
     max-width: 600px;
-    height: 50px;
+    height: 100px;
     overflow: hidden;
     position: relative;
     background: #a5c217;
@@ -107,11 +107,17 @@
     justify-content: center;
     border-radius: 10px;
 }
-
 .bon-a-savoir-slide {
     position: absolute;
     width: 100%;
     opacity: 0;
+    font-size: 1.8rem; /* Agrandit le texte */
+    font-weight: bold;        
+       background: #142b40;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
     transition: opacity 1s ease-in-out;
 }
 
