--- a/voyage.html
+++ b/voyage.html
@@ -92,12 +92,16 @@
 </head>
 <body>
     <header>
-        <h1>Carrefour Jeunesse Afrique</h1>
-        <nav>
-            <a href="#">Accueil</a>
-            <a href="#">Voyage</a>
-            <a href="#">À Propos</a>
-        </nav>
+        <h1>Carrefour Jeunesse Afrique - Renouer Nos Racines</h1>
+    </header>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="voyage.html">Voyage</a>
+        <a href="apropos.html">À Propos</a>
+    </nav>
+    <div class="logo">
+            <img src="contour.png" alt="Logo de CJA">
+        </div>
     </header>
     
     <div class="container">
