--- a/apropos.html
+++ b/apropos.html
@@ -1,117 +1,151 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À Propos - Carrefour Jeunesse Afrique</title>
+    <title>Carrefour Jeunesse Afrique - Renouer Nos Racines</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f6a008;
-            color: #142b40;
+            background-color: #f6a008;;
             overflow-x: hidden;
         }
+        body h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: #142b40;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    opacity: 0;
+    transform: translateY(10px);
+    animation: fadeInUp 0.8s ease-out forwards;
+}
 
         /* HEADER */
         header {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #f4f4f4;
-        }
-
-        header .logo {
-            display: flex;
             justify-content: center;
+            align-items: center;
+            background-color: #142b40;
+            padding: 10px 0;
         }
 
-        header .logo img {
-            max-width: 70px;
+        header h1 {
+            color: white;
+            font-size: 15px;
+            margin: 0;
+        }
+
+        .logo img {
+            max-width: 50px;
             height: auto;
+            margin-left: 10px;
+             position: absolute;
+                top: 10px;
+                right: 10px;
         }
 
         nav {
             display: flex;
             justify-content: center;
-            width: 100%;
+            gap: 20px;
+            padding: 10px 0;
+            background-color: #f4f4f4;
         }
 
         nav a {
             text-decoration: none;
             color: #142b40;
-            margin: 0 20px;
             font-size: 18px;
             padding: 10px 15px;
-            background-color: #f4f4f4;
+            background-color: white;
             border-radius: 5px;
-            transition: background-color 0.3s, transform 0.3s;
+            transition: background 0.3s;
         }
 
         nav a:hover {
             background-color: #a5c217;
-            transform: scale(1.1); /* Effet zoom au survol */
         }
 
-        /* Contenu de la page À Propos */
-        section {
-            padding: 60px 20px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            width: 80%;
-            border-radius: 10px;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        section h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-            color: #142b40;
-        }
-
-        section p {
-            font-size: 18px;
-            color: #555;
-            line-height: 1.8;
-            margin-bottom: 30px;
-        }
-
-        .team-container {
+        .section-container {
             display: flex;
-            justify-content: space-between;
+             flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
             gap: 20px;
-            flex-wrap: wrap;
-            animation: fadeIn 2s ease-in-out;
+            padding: 40px;
         }
 
-        .team-member {
-            background-color: #f4f4f4;
-            padding: 20px;
+        .section-container img {
+            max-width: 300px;
+             height: auto;
             border-radius: 10px;
+        }
+
+        section {
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+     .bon-a-savoir-container {
+    width: 100%;
+    max-width: 600px;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
+    background: #a5c217;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+.bon-a-savoir-slide {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    font-size: 1.8rem; /* Agrandit le texte */
+    font-weight: bold;        
+       background: #142b40;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    transition: opacity 1s ease-in-out;
+}
+
+.bon-a-savoir-slide.active {
+    opacity: 1;
+}
+
+        .cards-container {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+        }
+
+        .card {
+            background-color: white;
+            padding: 20px;
             width: 250px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 1s ease-out, transform 1s ease-out;
         }
 
-        .team-member h3 {
-            font-size: 22px;
-            margin-bottom: 10px;
-            color: #142b40;
-        }
-
-        .team-member p {
-            font-size: 16px;
-            color: #555;
-        }
-
-        .team-member:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+        .card.show {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         footer {
@@ -122,28 +156,40 @@
             bottom: 0;
             width: 100%;
         }
+        /* Style du bouton Participer */
+.btn-participer {
+    display: inline-block;
+    padding: 12px 20px;
+    background-color: #a5c217;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
 
-        /* Animations */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+/* Effet au survol */
+.btn-participer:hover {
+    background-color: #8ba30f;
+    transform: scale(1.05);
+}
+
     </style>
 </head>
+    
 <body>
-
-    <!-- HEADER -->
     <header>
-        Carrefour Jeunesse Afrique - Renouer Nos Racines
-        <div class="logo">
-            <img src="logo.png" alt="Logo de CJA">
-        </div>
-          <!-- NAVIGATION -->
+        <h1>Carrefour Jeunesse Afrique - Renouer Nos Racines</h1>
+    </header>
     <nav>
         <a href="index.html">Accueil</a>
         <a href="voyage.html">Voyage</a>
         <a href="apropos.html">À Propos</a>
     </nav>
+    <div class="logo">
+            <img src="contour.png" alt="Logo de CJA">
+        </div>
     </header>
 
   
@@ -156,37 +202,12 @@
         <p>Nous mettons l'accent sur la formation, l'accompagnement et la sensibilisation afin de faire émerger de nouveaux leaders pour l'avenir du continent africain. Notre engagement envers la jeunesse nous pousse à offrir des ressources et un mentorat tout au long de leur parcours.</p>
     </section>
 
-    <!-- ÉQUIPE -->
-    <section>
-        <h1>Notre Équipe</h1>
-        <div class="team-container">
-            <div class="team-member">
-                <img src="team1.jpg" alt="Membre 1" style="width:100px; height:100px; border-radius:50%; margin-bottom: 15px;">
-                <h3>Jean Dupont</h3>
-                <p>Président</p>
-                <p>Jean est passionné par le développement des jeunes et dirige CJA avec une vision claire d'avenir pour l'Afrique.</p>
-            </div>
-
-            <div class="team-member">
-                <img src="team2.jpg" alt="Membre 2" style="width:100px; height:100px; border-radius:50%; margin-bottom: 15px;">
-                <h3>Marie Ndiaye</h3>
-                <p>Directrice des Projets</p>
-                <p>Marie supervise les projets de CJA en assurant leur bonne exécution et impact sur la communauté.</p>
-            </div>
-
-            <div class="team-member">
-                <img src="team3.jpg" alt="Membre 3" style="width:100px; height:100px; border-radius:50%; margin-bottom: 15px;">
-                <h3>Ahmed Traoré</h3>
-                <p>Responsable Communication</p>
-                <p>Ahmed est responsable de la communication et veille à la visibilité de l'organisation à travers différents canaux.</p>
-            </div>
-        </div>
-    </section>
+   
 
     <!-- FOOTER -->
     <footer>
         &copy; 2024 Carrefour Jeunesse Afrique
     </footer>
+    </html>
 
-</body>
-</html>
+    
