--- a/voyage.html
+++ b/voyage.html
@@ -179,7 +179,7 @@
         }
         
         .programme {
-            background-color: #142b40;
+            background-color: #ffffff;
             text-align: center;
         }
          .title {
