--- a/voyage.html
+++ b/voyage.html
@@ -286,7 +286,7 @@
                         </li>
                </ol>    
         
-            <li>
+            
                     <h2>Coût et Inclusions</h2>
                     <p>  
                             <div class="content">
@@ -313,21 +313,21 @@
         <div class="section programme section-programme">
             <h2>📅 Programme détaillé</h2>
             <ul>
-                <li><h3>6 janvier :</h3> Accueil des participants, installation et présentation du programme.</li>
-                <li><h3>7 janvier :</h3> Rencontre avec les autorités et les différents services déconcentrés. Visite du centre Carrefour Jeunesse + rencontre avec le noyau de jeunes.</li>
-                <li><h3>8 janvier :</h3> Départ pour Porto-Novo et visite du centre SONGHAI (agriculture durable, énergies renouvelables, artisanat moderne).</li>
-                <li><h3>9 janvier :</h3> Départ pour Ouidah pour le festival Vodoun Days.</li>
-                <li><h3>10 janvier :</h3> Fête du Vodou à Ouidah : découverte des rituels, danses et chants traditionnels. Rencontre avec des figures culturelles et spirituelles.</li>
-                <li><h3>11 janvier :</h3> Séminaire sur l’entrepreneuriat et le leadership. Rencontre avec les membres de la diaspora ayant investi au Bénin.</li>
-                <li><h3>12 janvier :</h3> Rencontre intergénérationnelle sur la thématique de la valorisation de la femme africaine.</li>
-                <li><h3>13 janvier :</h3> Exploration des sites historiques (Abomey) et des initiatives patrimoniales.</li>
-                <li><h3>14 janvier :</h3> L’histoire de la colonisation racontée par un historien béninois, suivie d’un débat.</li>
-                <li><h3>15 janvier :</h3> Visite de Grand Popo et détente (danse autour du feu).</li>
-                <li><h3>16 janvier :</h3> Cérémonie de clôture et présentation des retours d’expérience des participants.</li>
+                <li><h3>6 janvier </h3> Accueil des participants, installation et présentation du programme.</li>
+                <li><h3>7 janvier </h3> Rencontre avec les autorités et les différents services déconcentrés. Visite du centre Carrefour Jeunesse + rencontre avec le noyau de jeunes.</li>
+                <li><h3>8 janvier </h3> Départ pour Porto-Novo et visite du centre SONGHAI (agriculture durable, énergies renouvelables, artisanat moderne).</li>
+                <li><h3>9 janvier </h3> Départ pour Ouidah pour le festival Vodoun Days.</li>
+                <li><h3>10 janvier </h3> Fête du Vodou à Ouidah : découverte des rituels, danses et chants traditionnels. Rencontre avec des figures culturelles et spirituelles.</li>
+                <li><h3>11 janvier </h3> Séminaire sur l’entrepreneuriat et le leadership. Rencontre avec les membres de la diaspora ayant investi au Bénin.</li>
+                <li><h3>12 janvier </h3> Rencontre intergénérationnelle sur la thématique de la valorisation de la femme africaine.</li>
+                <li><h3>13 janvier </h3> Exploration des sites historiques (Abomey) et des initiatives patrimoniales.</li>
+                <li><h3>14 janvier </h3> L’histoire de la colonisation racontée par un historien béninois, suivie d’un débat.</li>
+                <li><h3>15 janvier </h3> Visite de Grand Popo et détente (danse autour du feu).</li>
+                <li><h3>16 janvier </h3> Cérémonie de clôture et présentation des retours d’expérience des participants.</li>
             </ul>
         </div>
 
-        <div class="section durée">⏳ Durée : 10 jours d'immersion totale au Bénin. 
+        <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
              <div class="content">
                 <ol>
                     <li> <h2>Dates : </h2> <li> 6 au 16 janvier.</li>
