--- a/voyage.html
+++ b/voyage.html
@@ -330,9 +330,9 @@
         <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
              <div class="content">
                 <ol>
-                    <li> <h2>Dates : </h2> <li> 6 au 16 janvier.</li>
-                    <li> <h2>Lieu : </h2>Bénin, avec des activités organisées dans plusieurs villes</li>
-                    <li> <h2>Ville : </h2>Cotonou, Ouidah, Abomey et Porto-No </li>  
+                    <li> <h2>Dates  </h2> <li> 6 au 16 janvier.</li>
+                    <li> <h2>Lieu  </h2>Bénin, avec des activités organisées dans plusieurs villes</li>
+                    <li> <h2>Ville  </h2>Cotonou, Ouidah, Abomey et Porto-No </li>  
                 </ol>
             </div>    
         </div>
