--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <nav>
         <a href="index.html">Accueil</a>
         <a href="voyage.html">Voyage</a>
-        <a href="apropos.html">À Propos</a>
+        <a href="Contacts.php">À Propos</a>
     </nav>
     <div class="logo">
             <img src="contour.png" alt="Logo de CJA">
