--- a/apropos.html
+++ b/apropos.html
@@ -268,19 +268,20 @@ form button:hover {
         <p><strong>Email :</strong> ...........................</p>
     </div>
 
-    <!-- Formulaire de contact (optionnel) -->
-    <form action="mailto:contact@carrefourjeunesseafrique.org" method="POST" enctype="text/plain">
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="name" required>
+      <!-- Formulaire de contact (optionnel) -->
+    
+<form action="send_email.php" method="POST">
+    <label for="name">Nom :</label>
+    <input type="text" id="name" name="name" required>
 
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" required>
+    <label for="email">Email :</label>
+    <input type="email" id="email" name="email" required>
 
-        <label for="message">Message :</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+    <label for="message">Message :</label>
+    <textarea id="message" name="message" rows="4" required></textarea>
 
-        <button type="submit" class="btn-participer">Envoyer</button>
-    </form>
+    <button type="submit" class="btn-participer">Envoyer</button>
+</form>
 </section>
  
 
@@ -290,4 +291,23 @@ form button:hover {
     </footer>
     </html>
 
-    
+<?php
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+    $name = $_POST['name'];
+    $email = $_POST['email'];
+    $message = $_POST['message'];
+
+    $to = "carrefourjeunesseafrique@gmail.com"; // Adresse email de destination
+    $subject = "Message de contact depuis le site web";
+    $body = "Nom : $name\nEmail : $email\n\nMessage :\n$message";
+    $headers = "From: $email";
+
+    if (mail($to, $subject, $body, $headers)) {
+        echo "Votre message a été envoyé avec succès.";
+    } else {
+        echo "Désolé, une erreur est survenue. Votre message n'a pas pu être envoyé.";
+    }
+}
+?>
+
+  
