--- a/voyage.html
+++ b/voyage.html
@@ -317,7 +317,7 @@
             <h2>📅 Programme détaillé</h2>
             <ul>
                 <li><h3>6 janvier </h3> Accueil des participants, installation et présentation du programme.</li>
-                <li><h3>7 janvier </h3> Rencontre avec les autorités et les différents services déconcentrés. Visite du centre Carrefour Jeunesse + rencontre avec le noyau de jeunes.</li>
+                <li><h3>7 janvier </h3> Présentation CJA, Rencontre avec les autorités communales. Jeu découverte comé et rencontre du noyau des jeunes de CJA. .</li>
                 <li><h3>8 janvier </h3> Départ pour Porto-Novo et visite du centre SONGHAI (agriculture durable, énergies renouvelables, artisanat moderne).</li>
                 <li><h3>9 janvier </h3> Départ pour Ouidah pour le festival Vodoun Days.</li>
                 <li><h3>10 janvier </h3> Fête du Vodou à Ouidah : découverte des rituels, danses et chants traditionnels. Rencontre avec des figures culturelles et spirituelles.</li>
@@ -330,6 +330,55 @@
             </ul>
         </div>
 
+
+
+            <table border="1">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>Petit Déjeuner</th>
+            <th>Activité Matin</th>
+            <th>Repas Midi</th>
+            <th>Après-midi</th>
+            <th>Repas Soir</th>
+            <th>Soirée</th>
+            <th>Logement</th>
+            <th>Transport</th>
+            <th>Référent</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Jour 1</td>
+            <td>Café + Pain</td>
+            <td>Visite culturelle</td>
+            <td>Riz + Poulet</td>
+            <td>Atelier de formation</td>
+            <td>Soupe + Pain</td>
+            <td>Veillée artistique</td>
+            <td>Hôtel XYZ</td>
+            <td>Bus</td>
+            <td>Nom du référent</td>
+        </tr>
+        <tr>
+            <td>Jour 2</td>
+            <td>Thé + Beignets</td>
+            <td>Conférence</td>
+            <td>Pâtes + Viande</td>
+            <td>Sortie découverte</td>
+            <td>Salade + Jus</td>
+            <td>Jeux & échanges</td>
+            <td>Auberge ABC</td>
+            <td>Minibus</td>
+            <td>Nom du référent</td>
+        </tr>
+    </tbody>
+</table>
+
+
+
+
+        
         <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
              <div class="content">
                 <ol>
