--- a/voyage.html
+++ b/voyage.html
@@ -286,10 +286,10 @@
         <a href="apropos.html">À Propos</a>
     </nav>
     <div class="logo">
-            <img src="logo.jpg" alt="Logo de CJA">
+            <img src="logo.png" alt="Logo de CJA">
         </div>
     <div class="section-container">
-        <img src="projet.jpeg" alt="Illustration du projet">
+        <img src="beh.jpeg" alt="Illustration du projet">
         <section>
             <h1>Renouer avec Nos Racines" est bien plus qu’un simple voyage."</h1>
             <p> Ce projet offre une expérience transformatrice conçue pour montrer le vrai visage de l’Afrique et encourager des liens profonds entre 
@@ -356,9 +356,9 @@
         </div>
         
    <div class="image-container">
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
+        <img src="gan.jpg" alt="Image 1">
+        <img src="pop.jpg" alt="Image 2">
+        <img src="ama.jpg" alt="Image 3">
     </div>
  
         <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
