--- a/voyage.html
+++ b/voyage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrefour Jeunesse Afrique - Renouer Nos Racines</title>
+    <title>Carrefour Jeunesse Afrique - Renouer avec Nos Racines</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -291,12 +291,7 @@
         </div>
     <div class="section-container">
         <img src="ama.jpeg" alt="Illustration du projet">
-        <section>
-            <h1>Renouer avec Nos Racines" est bien plus qu’un simple voyage."</h1>
-            <p> Ce projet offre une expérience transformatrice conçue pour montrer le vrai visage de l’Afrique et encourager des liens profonds entre 
-                la diaspora et le continent. En participant, chaque individu s’engage non seulement à se reconnecter avec son héritage culturel, mais aussi à contribuer activement 
-                à un avenir où la diaspora joue un rôle clé dans l’essor du continent Africain.</p>
-        </section>
+       
     </div>
        <br> <br>
     <br> <br>
