--- a/voyage.html
+++ b/voyage.html
@@ -323,10 +323,10 @@
                                     </ol>
                           </div>    
                     </p>
-                    	Le paiement se fait sur le compte suivant : <h2>513100001386 </h2>  <br> Code Banque : <h2> BJ 067 </h2>  Code Guichet : <h2>  01513 </h2> , Clé Rib: 33 
+                    	Le paiement se fait sur le compte suivant : <h2>513100001386 </h2>  <br> Code Banque  <h2> BJ 067 </h2>  Code Guichet  <h2>  01513 </h2>  Clé Rib: 33 
                     <p>
-                           <h2>  Titulaire : </h2>  CARREFOUR JEUNESSE AFRQUE  <h2> Objet : </h2>  Rénouer avec nos racines </p>
-                         <p> Après paiement, veillez bien envoyé la facture sur le mail : cjadirection@outlook.fr. Vous recevrez après 48h, une message de confirmation
+                           <h2>  Titulaire  </h2>  CARREFOUR JEUNESSE AFRQUE  <h2> Objet  </h2>  Rénouer avec nos racines </p>
+                         <p> Après paiement, veillez bien envoyé la facture sur le mail : <h3>cjadirection@outlook.fr </h3>. <br> Vous recevrez après 48h, un message de confirmation
                              de votre inscription.  </p> 
             </li>
            
@@ -358,7 +358,6 @@
         
    <div class="image-container">
         <img src="pop.jpg" alt="Image 2">
-        <img src="beh.jpg" alt="Image 3">
     </div>
  
         <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
