--- a/voyage.html
+++ b/voyage.html
@@ -243,7 +243,7 @@
         }
 
         footer {
-            background-color: #1f2b40;
+            background-color: #142b40;
             color: white;
             padding: 15px;
             position: fixed;
@@ -359,7 +359,7 @@
    <div class="image-container">
         <img src="pop.jpg" alt="Image 2">
     </div>
- 
+    <p>     </p>
         <div class="section durée"> <h2> ⏳ Durée : 10 jours d'immersion totale au Bénin. </h2>
              <div class="content">
                 <ol>
