--- a/apropos.html
+++ b/apropos.html
@@ -254,8 +254,9 @@ form button:hover {
         </div>
     </header>
 
-  
-
+    <div class="logo">
+            <img src="beh.jpg" alt="Logo de CJA">
+        </div>
   
      <!-- SECTION CONTACTS -->
 <section class="contacts">
@@ -263,26 +264,11 @@ form button:hover {
     <p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter à l'une des adresses suivantes :</p>
 
     <div class="contact-info">
-        <p><strong>Adresse :</strong> Carrefour Jeunesse Afrique, Comé, Bénin</p>
-        <p><strong>Téléphone :</strong> .............</p>
-        <p><strong>Email :</strong> ...........................</p>
+        <p><strong> Responssable : DEGNON Israël:</strong> +229 0160526867</p>
+       
     </div>
 
-      <!-- Formulaire de contact (optionnel) -->
     
-<form action="send_email.php" method="POST">
-    <label for="name">Nom :</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email :</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Message :</label>
-    <textarea id="message" name="message" rows="4" required></textarea>
-
-    <button type="submit" class="btn-participer">Envoyer</button>
-</form>
-</section>
  
 
     <!-- FOOTER -->
