--- a/voyage.html
+++ b/voyage.html
@@ -326,7 +326,7 @@
                     	Le paiement se fait sur le compte suivant : <h2>513100001386 </h2>  <br> Code Banque  <h2> BJ 067 </h2>  Code Guichet  <h2>  01513 </h2>  Clé Rib: 33 
                     <p>
                            <h2>  Titulaire  </h2>  CARREFOUR JEUNESSE AFRQUE  <h2> Objet  </h2>  Rénouer avec nos racines </p>
-                         <p> Après paiement, veillez bien envoyé la facture sur le mail : <h3>cjadirection@outlook.fr </h3>. <br> Vous recevrez après 48h, un message de confirmation
+                         <p> Après paiement, veillez bien envoyé la facture sur le mail : <h3>cjadirection@outlook.fr </h3> <br> Vous recevrez après 48h, un message de confirmation
                              de votre inscription.  </p> 
             </li>
            
@@ -365,7 +365,7 @@
                 <ol>
                     <li> <h2>Dates  </h2> 6 au 16 janvier.</li>
                     <li> <h2>Lieu  </h2>Bénin, avec des activités organisées dans plusieurs villes</li>
-                    <li> <h2>Ville  </h2>Cotonou, Ouidah, Abomey et Porto-No </li>  
+                    <li> <h2>Ville  </h2>Cotonou, Ouidah, Abomey et Porto-Novo </li>  
                 </ol>
             </div>    
         </div>
