--- a/apropos.html
+++ b/apropos.html
@@ -254,9 +254,10 @@ form button:hover {
         </div>
     </header>
 
-    <div class="logo">
-            <img src="beh.jpg" alt="Logo de CJA">
-        </div>
+   
+   <div class="image-container">
+        <img src="beh.jpg" alt="Image 2">
+    </div>
   
      <!-- SECTION CONTACTS -->
 <section class="contacts">
