--- a/apropos.html
+++ b/apropos.html
@@ -132,14 +132,19 @@ form button:hover {
             background-color: #a5c217;
         }
 
-        .section-container {
-            display: flex;
-             flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            padding: 40px;
-        }
+       .image-container {
+    display: flex;
+    justify-content: center; /* Centre horizontalement */
+    align-items: center; /* Centre verticalement (si hauteur définie) */
+    width: 100%; /* Prend toute la largeur */
+}
+
+.image-container img {
+    max-width: 300px; /* Réduit l’image */
+    height: auto; /* Garde les proportions */
+    border-radius: 10px; /* Coins arrondis pour un effet stylé */
+}
+
 
        
 
